// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/npm should fetch package info from npm 1`] = `
Object {
  "versions": Object {
    "0.0.1": Object {},
  },
}
`;

exports[`api/npm should fetch package info from npm 2`] = `
Array [
  "https://npm.mycustomregistry.com/foobar",
  Object {
    "headers": Object {
      "accept": "application/vnd.npm.install-v1+json; q=1.0, application/json; q=0.8, */*",
    },
    "json": true,
  },
]
`;

exports[`api/npm should send an authorization header if provided 1`] = `
Object {
  "versions": Object {
    "0.0.1": Object {},
  },
}
`;

exports[`api/npm should send an authorization header if provided 2`] = `
Array [
  "https://npm.mycustomregistry.com/foobar",
  Object {
    "headers": Object {
      "accept": "application/vnd.npm.install-v1+json; q=1.0, application/json; q=0.8, */*",
      "authorization": "Basic 1234",
    },
    "json": true,
  },
]
`;
